# diplomovka

./: .gitignore  CMakeLists.txt  README.md
src/: bioData.cpp  bioData.h  bioData.ui  filters.cpp  filters.h  help.cpp  help.h  main.cpp  source.cpp  source.h  subWin.cpp  subWin.h  viewerWidget.cpp  viewerWidget.h
src/documentation/: biodataHelp.qch  biodataHelp.qhc
test_data/: cropT7.pgm  testTIF.tif
tex_files/: dip_sk.aux  dip_sk.blg  dip_sk.dvi  dip_sk.out  dip_sk.tex  dip_sk.toc
tex_files/pics/: cropT2.pgm  cropT27.pgm
tex_files/prezentacia/: CambridgeUS.sty  prez.aux  prez.blg  prez.nav  prez.out  prez.tex  prez.toc
tex_files/prezentacia/pics/: cropT25.pgm  cropT45.pgm  kapura.pgm  otsu.pgm  vysek.tif
